--- a/Projects/EvalC/SCMRTOS/blink2eventflag/Makefile
+++ b/Projects/EvalC/SCMRTOS/blink2eventflag/Makefile
@@ -6,7 +6,14 @@
 
 TOPDIR = ../../../..
 
-BOARD	= DISCOVERY_VL
+#TOOL	= /opt/Sourcery_gcc/bin/arm-none-eabi-
+#TOOL	= /opt/arm-kgp-eabi/bin/arm-kgp-eabi-
+#TOOL	= /opt/arm-kgp-eabi.12/bin/arm-kgp-eabi-
+#TOOL	= /opt/arm-none-eabi/bin/arm-none-eabi-
+
+
+#BOARD	= DISCOVERY_VL
+BOARD	= STM3210C
 
 #USE_STM_PERIF_LIB = 1
 RTOS = scmRTOS
@@ -17,6 +24,7 @@ OPTIMIZE	= -O2
 
 #PROJECT_SRC = src
 PROJECT_FLAGS = -ggdb
+#PROJECT_LDFLAGS = -nostartfiles
 #PROJECT_LDFLAGS = -nostartfiles -nostdlib
 #PROJECT_CWARNINGS =
 #PROJECT_CXXWARNINGS =
