--- a/Makefile.common
+++ b/Makefile.common
@@ -18,11 +18,15 @@
 
 
 ifndef TOOL
-#TOOL	= arm-none-eabi-
 #TOOL	= /opt/Sourcery_gcc/bin/arm-none-eabi-
-TOOL	= /opt/Sourcery_gcc-4.6.3/bin/arm-none-eabi-
-#TOOL	= /opt/arm-kgp-eabi/bin/arm-kgp-eabi-
-#	TOOL	= arm-kgp-eabi-
+#TOOL	= /opt/Sourcery_gcc-4.5.2/bin/arm-none-eabi-
+#TOOL	= /opt/Sourcery_gcc-4.6.3/bin/arm-none-eabi-
+#TOOL	= /opt/Sourcery_gcc-4.7.2/bin/arm-none-eabi-
+
+TOOL	= /opt/arm-kgp-eabi/bin/arm-kgp-eabi-
+
+#TOOL	= /opt/arm-none-eabi/bin/arm-none-eabi-
+
 endif
 
 ###########################################################
