--- a/Projects/EvalC/SCMRTOS/blink2eventflag/Makefile
+++ b/Projects/EvalC/SCMRTOS/blink2eventflag/Makefile
@@ -5,12 +5,14 @@
 #
 
 TOPDIR = ../../../..
-
 #TOOL	= /opt/Sourcery_gcc/bin/arm-none-eabi-
-#TOOL	= /opt/arm-kgp-eabi/bin/arm-kgp-eabi-
-#TOOL	= /opt/arm-kgp-eabi.12/bin/arm-kgp-eabi-
-#TOOL	= /opt/arm-none-eabi/bin/arm-none-eabi-
+#TOOL	= /opt/Sourcery_gcc-4.5.2/bin/arm-none-eabi-
+#TOOL	= /opt/Sourcery_gcc-4.6.3/bin/arm-none-eabi-
+#TOOL	= /opt/Sourcery_gcc-4.7.2/bin/arm-none-eabi-
 
+#TOOL	= /opt/arm-kgp-eabi/bin/arm-kgp-eabi-
+
+#TOOL	= /opt/arm-none-eabi/bin/arm-none-eabi-
 
 #BOARD	= DISCOVERY_VL
 BOARD	= STM3210C
