--- a/Makefile.common
+++ b/Makefile.common
@@ -37,6 +37,7 @@ CC			= $(TOOL)gcc
 CXX			= $(TOOL)g++
 LD			= $(TOOL)g++
 GDB			= $(TOOL)gdb
+RUN			= $(TOOL)run
 AR			= $(TOOL)ar
 AS			= $(CC) -x assembler-with-cpp
 OBJCOPY	= $(TOOL)objcopy
@@ -156,7 +157,14 @@ endif
 
 
 # flags
-FLAGS	= -mcpu=$(MCU) -mlittle-endian -mthumb -mthumb-interwork 
+FLAGS	= -mlittle-endian 
+
+ifdef USE_SIMULATOR
+FLAGS += -DUSE_SIMULATOR
+else
+FLAGS	+= -mcpu=$(MCU) -mthumb -mthumb-interwork 
+endif
+
 FLAGS	+= -Wa,-gdwarf-2
 FLAGS	+= $(INCLUDES)
 FLAGS	+= -MD 
@@ -170,9 +178,11 @@ ifeq ($(MCU),cortex-m3)
 	INCLUDES += -I$(TOPDIR)/Libraries/CMSIS3/CoreSupport
 	INCLUDES += -I$(TOPDIR)/Libraries/CMSIS3/DeviceSupport/ST/STM32F10x
 
-	# source directories (all *.c, *.cpp and *.S files included)
-	DIRS += $(TOPDIR)/Libraries/CMSIS3/CoreSupport
-	DIRS += $(TOPDIR)/Libraries/CMSIS3/DeviceSupport/ST/STM32F10x
+	ifndef USE_SIMULATOR
+		# source directories (all *.c, *.cpp and *.S files included)
+		DIRS += $(TOPDIR)/Libraries/CMSIS3/CoreSupport
+	endif
+		DIRS += $(TOPDIR)/Libraries/CMSIS3/DeviceSupport/ST/STM32F10x
 else
 	# includes
 	INCLUDES += -I$(TOPDIR)/Libraries/CMSIS4/Include
@@ -333,8 +343,14 @@ CXXFLAGS	+= -funsigned-bitfields -fshort-enums
 CXXFLAGS	+= $(WARNINGS) $(CXXWARNINGS) $(PROJECT_CXXWARNINGS)
 CXXFLAGS	+= -Wa,-adhlns=$(addprefix $(LSTDIR)/, $(notdir $(addsuffix .lst, $(basename $<))))
 
-LD_FLAGS	= -mcpu=$(MCU)
-LD_FLAGS	+= -mlittle-endian -mthumb -mthumb-interwork
+
+
+LD_FLAGS	= -mlittle-endian 
+
+ifndef USE_SIMULATOR
+LD_FLAGS	+= -mcpu=$(MCU)  -mthumb -mthumb-interwork
+endif
+
 LD_FLAGS	+= $(PROJECT_LDFLAGS)
 LD_FLAGS	+= -Wl,-Map="$(MAP)",--cref
 LD_FLAGS	+= -fno-exceptions -fno-rtti	
@@ -342,7 +358,7 @@ LD_FLAGS	+= -Wl,--gc-sections
 LD_FLAGS	+= -T$(LD_SCRIPT)
 
 
-.SILENT :
+#.SILENT :
 
 .PHONY: all dirs build clean flash run
 
@@ -418,8 +434,13 @@ cleanall: clean
 	rmdir $(EXEDIR)
 	rmdir $(LSTDIR)
 
+ifdef USE_SIMULATOR
+run: $(ELF)
+	$(RUN) $(ELF)
+else
 run: $(ELF)
 	$(GDB) -x $(RESOURCEDIR)/stlink.gdb $(ELF)
+endif
 
 # dependencies
 include $(wildcard $(OBJDIR)/*.d) 
