--- a/Projects/DiscoveryF4/FreeRTOS/blink2tasks/Makefile
+++ b/Projects/DiscoveryF4/FreeRTOS/blink2tasks/Makefile
@@ -5,7 +5,7 @@
 # Makefile template for STM32 base project
 #
 
-TOPDIR = ../../..
+TOPDIR = ../../../..
 
 #TOOL	= /opt/Sourcery_gcc/bin/arm-none-eabi-
 #TOOL	= /opt/Sourcery_gcc-4.5.2/bin/arm-none-eabi-
@@ -16,25 +16,18 @@ TOPDIR = ../../..
 BOARD	= DISCOVERY_F4
 
 USE_STM_PERIF_LIB = 1
-#USE_USB = 1
-#RTOS = FreeRTOS
+RTOS = FreeRTOS
 START_FROM_RAM = 1
-USART_RETARGET = MINI
-#USART_RETARGET = NEWLIB
+#USART_RETARGET = 1
+HARD_FLOAT = 1
 
 TARGET		= target
 OPTIMIZE	= -O2
 
 #PROJECT_SRC = src
-#PROJECT_SRC = src 
-#PROJECT_INCLUDES = $(TOPDIR)/Libraries/STM32_USB_Device_Library/Class/hid/inc
 PROJECT_FLAGS = -ggdb
 PROJECT_LDFLAGS = -nostartfiles -nostdlib
-#PROJECT_WARNINGS = -Wall -Wextra -Wimplicit -Wcast-align -Wpointer-arith -Wredundant-decls -Wshadow -Wcast-qual -Wcast-align
 #PROJECT_CWARNINGS =
 #PROJECT_CXXWARNINGS =
-
-#VPATH += $(TOPDIR)/Libraries/STM32_USB_Device_Library/Class/hid/src
-#SRCS += usb_dcd_int.c usb_dcd.c usbd_core.c usbd_req.c usbd_ioreq.c usbd_hid_core.c
 
 include $(TOPDIR)/Makefile.common
