import miniunit; usart init without stm library

--- a/Projects/EvalC/minunit/Makefile
+++ b/Projects/EvalC/minunit/Makefile
@@ -26,7 +26,7 @@ START_FROM_RAM = 1
 USART_RETARGET = MINI
 #USART_RETARGET = NEWLIB
 
-TARGET		= printf_test
+TARGET		= miniunit
 OPTIMIZE	= -O2
 
 #PROJECT_SRC = src
