--- a/Libraries/STM32F10x_StdPeriph_Driver/Makefile
+++ b/Libraries/STM32F10x_StdPeriph_Driver/Makefile
@@ -1,26 +1,24 @@
 #+---------------------------------------------------------------------------
 #
-#  Copyright (c) 2010 Anton Gusev aka AHTOXA (HTTP://AHTOXA.NET)
+# Copyright (c) 2011 Alexey Dyachenko <alexd@inbox.ru>
 #
-#  File:       Makefile
+# Makefile template for STM32 base project
 #
-#  Contents:   makefile to build arm Cortex-M3 software with gcc
-#
-#----------------------------------------------------------------------------
-
-#############  program name
 
 TOPDIR = ../..
 
 OPTIMIZE	= -O2
 
-BOARD	= STM3210C
+#BOARD	= STM3210C
+BOARD	= DISCOVERY_VL
 USE_STM_PERIF_LIB = 1
 #RTOS = scmRTOS
 #START_FROM_RAM = 1
 
 TARGET		= test
-LIBRARY = STM32F10x_StdPeriphLib.a
+
+#LIBRARY = STM32F10x_StdPeriphLibCL.a
+LIBRARY = STM32F10x_StdPeriphLibVL.a
 
 PROJECT_SRC = src
 PROJECT_FLAGS = -ggdb
