--- a/Projects/EvalC/Neo/Makefile
+++ b/Projects/EvalC/Neo/Makefile
@@ -10,7 +10,7 @@ TOPDIR = ../../..
 BOARD	= STM3210C
 USE_STM_PERIF_LIB = 1
 #RTOS = scmRTOS
-START_FROM_RAM = 1
+#START_FROM_RAM = 1
 
 TARGET		= Neo
 OPTIMIZE	= -O2
