--- a/Makefile.common
+++ b/Makefile.common
@@ -91,62 +91,32 @@ SRCS	+= startup_gcc.c vectors.c
 #CHIP		= STM32F10X_LD
 #CHIP		= STM32F10X_LD_VL
 
-BOARD_FLAFS =
+BOARD_FLAGS =
 
-ifeq ($(BOARD),DISCOVERY_VL)
-	CHIP = STM32F10X_LD_VL
-	MCU	= cortex-m3
+ifdef BOARD
+	include $(TOPDIR)/Makefiles/BOARD.$(BOARD)
+endif
 
-	INCLUDES += -I$(TOPDIR)/Boards/STM32VL_EVAL
-	VPATH += $(TOPDIR)/Boards/STM32VL_EVAL
+#ifeq ($(BOARD),DISCOVERY_VL)
+#	include $(TOPDIR)/Makefiles/BOARD.$(BOARD)
+#else
+#	ifeq ($(BOARD),STM3210C)
+#		include $(TOPDIR)/Makefiles/BOARD.$(BOARD)
+#	else
+#		ifeq ($(BOARD),DISCOVERY_F4)
+#			include $(TOPDIR)/Makefiles/BOARD.$(BOARD)
+#		else
+#			error "Board is not defined"
+#		endif
+#	endif
+#endif
 
-	ifdef USE_STM_PERIF_LIB
-		INCLUDES += -I$(TOPDIR)/Boards/STM32VL_EVAL/STM
-		VPATH += $(TOPDIR)/Boards/STM32VL_EVAL/STM
-		# individual source files
-		SRCS	+= STM32vldiscovery.c
-	endif
-else
-	ifeq ($(BOARD),STM3210C)
-		CHIP = STM32F10X_CL
-		MCU	= cortex-m3
+ifeq ($(MCU),)
+$(error MCU not set)
+endif
 
-		BOARD_FLAFS += -DUSE_STM3210C_EVAL
-
-		INCLUDES += -I$(TOPDIR)/Boards/STM3210C_EVAL
-		VPATH += $(TOPDIR)/Boards/STM3210C_EVAL
-		#
-		# individual source files
-#		SRCS	+= board_io.cpp
-
-		ifdef USE_STM_PERIF_LIB
-			INCLUDES += -I$(TOPDIR)/Boards/STM3210C_EVAL/STM
-			VPATH += $(TOPDIR)/Boards/STM3210C_EVAL/STM
-			# individual source files
-			SRCS	+= stm32_eval.c
-#			SRCS	+= stm3210c_eval_lcd.c stm3210c_eval_ioe.c stm32_eval_spi_sd.c
-#			stm32_eval_i2c_tsensor.c  stm32_eval_spi_flash.c  stm32_eval_sdio_sd.c  stm32_eval_i2c_ee.c
-		endif
-	else
-		ifeq ($(BOARD),DISCOVERY_F4)
-			CHIP = STM32F4
-			MCU	= cortex-m4
-			PROJECT_FLAGS += -DHSE_VALUE=8000000
-
-			INCLUDES += -I$(TOPDIR)/Boards/STM32F4_EVAL
-			VPATH += $(TOPDIR)/Boards/STM32F4_EVAL
-
-			ifdef USE_STM_PERIF_LIB
-				INCLUDES += -I$(TOPDIR)/Boards/STM32F4_EVAL/STM
-				VPATH += $(TOPDIR)/Boards/STM32F4_EVAL/STM
-				# individual source files
-				SRCS	+= stm32f4_discovery.c
-				#stm32f4_discovery_audio_codec.c stm32f4_discovery_lis302dl.c
-			endif
-		else
-			error "Board is not defined"
-		endif
-	endif
+ifeq ($(CHIP),)
+$(error CHIP not set)
 endif
 
 
@@ -345,14 +315,14 @@ OBJS	:= $(patsubst %, $(OBJDIR)/%, $(OBJS))
 AFLAGS	= $(FLAGS)
 AFLAGS	+= -Wa,-adhlns=$(addprefix $(LSTDIR)/, $(notdir $(addsuffix .lst, $(basename $<))))
 
-CFLAGS	= $(BASEFLAGS) $(BOARD_FLAFS)
+CFLAGS	= $(BASEFLAGS) $(BOARD_FLAGS)
 CFLAGS	+= $(OPTIMIZE)
 CFLAGS	+= -std=gnu99
 CFLAGS	+= -ffunction-sections -fdata-sections
 CFLAGS	+= $(WARNINGS) $(CWARNINGS) $(PROJECT_CWARNINGS)
 CFLAGS	+= -Wa,-adhlns=$(addprefix $(LSTDIR)/, $(notdir $(addsuffix .lst, $(basename $<))))
 
-CXXFLAGS	= $(BASEFLAGS)  $(BOARD_FLAFS)
+CXXFLAGS	= $(BASEFLAGS)  $(BOARD_FLAGS)
 CXXFLAGS	+= $(OPTIMIZE)
 CXXFLAGS	+= -fomit-frame-pointer
 CXXFLAGS	+= -fno-exceptions -fno-rtti
@@ -376,102 +346,4 @@ LD_FLAGS	+= -fno-exceptions -fno-rtti
 LD_FLAGS	+= -Wl,--gc-sections
 LD_FLAGS	+= -T$(LD_SCRIPT)
 
-
-.SILENT :
-
-.PHONY: all dirs build clean flash run debug
-
-############# targets
-
-all : dirs $(ELF) $(HEX) $(LSS) $(OK)
-
-build: clean all
-
-lib : $(LIBRARY)
-
-$(LSS): $(ELF) Makefile
-	@echo --- making asm-lst...
-#	@$(OBJDUMP) -dStC $(ELF) > $(LSS)
-	@$(OBJDUMP) -dC $(ELF) > $(LSS)
-
-$(OK): $(ELF)
-	@$(SIZE) $(ELF)
-	@echo "Errors: none"
-
-$(ELF):	$(OBJS) Makefile
-	@echo --- linking...
-	$(LD) $(OBJS) $(LD_FLAGS) $(LIBS) -o "$(ELF)"
-
-$(LIBRARY): $(OBJS) Makefile
-	@echo --- linking library ...
-	$(AR) -r $(LIBRARY) $(OBJS) 
-
-$(HEX): dirs $(ELF)
-	@echo --- make hex...
-	@$(OBJCOPY) -O ihex $(ELF) $(HEX)
-
-flash: $(HEX)
-	@echo "Programming with stm32flash"
-	stm32flash -w $(HEX) -v -g 0x0 /dev/ttyS0
-
-
-$(OBJDIR)/%.o: %.cpp
-	@echo --- compiling $(*F).cpp
-	$(CXX) -c $(CXXFLAGS) -o $@ $<
-
-$(OBJDIR)/%.o: %.cc
-	@echo --- compiling $(*F).cc
-	$(CXX) -c $(CXXFLAGS) -o $@ $<
-
-$(OBJDIR)/%.o: %.c
-	@echo --- compiling $(*F).c
-	$(CC) -c $(CFLAGS) -o $@ $<
-
-$(OBJDIR)/%.o: %.S
-	@echo --- assembling $(*F).S
-	$(AS) -c $(AFLAGS) -o $@ $<
-
-dirs: $(OBJDIR) $(EXEDIR) $(LSTDIR)
-
-$(OBJDIR):
-	-@$(MD) $(OBJDIR)
-
-$(EXEDIR):
-	-@$(MD) $(EXEDIR)
-
-$(LSTDIR):
-	-@$(MD) $(LSTDIR)
-
-clean:
-	-@$(RM) $(OBJDIR)/*.d 2>/dev/null
-	-@$(RM) $(OBJDIR)/*.o 2>/dev/null
-	-@$(RM) $(EXEDIR)/*.hex 2>/dev/null
-	-@$(RM) $(EXEDIR)/*.bin 2>/dev/null
-	-@$(RM) $(EXEDIR)/*.elf 2>/dev/null
-	-@$(RM) $(LSTDIR)/*.lst 2>/dev/null
-	-@$(RM) $(LSTDIR)/*.lss 2>/dev/null
-	-@$(RM) $(LSTDIR)/*.map 2>/dev/null
-
-cleanall: clean
-	rmdir $(OBJDIR)
-	rmdir $(EXEDIR)
-	rmdir $(LSTDIR)
-
-ifdef USE_SIMULATOR
-run: dirs $(ELF)
-	$(RUN) $(ELF)
-else
-run: dirs $(ELF)
-	$(GDB) -x $(RESOURCEDIR)/stlink_run.gdb $(ELF)
-endif
-
-ifdef USE_SIMULATOR
-debug: dirs $(ELF)
-	$(GDB) -x $(RESOURCEDIR)/simulator.gdb $(ELF)
-else
-debug: dirs $(ELF)
-	$(GDB) -x $(RESOURCEDIR)/stlink_debug.gdb $(ELF)
-endif
-
-# dependencies
-include $(wildcard $(OBJDIR)/*.d) 
+include $(TOPDIR)/Makefiles/Makefile.targets
