new STM3210C EvalBoard files from USB-Host library

--- a/Projects/EvalC/DisplayTest/Makefile
+++ b/Projects/EvalC/DisplayTest/Makefile
@@ -21,7 +21,7 @@ PROJECT_LDFLAGS = -nostartfiles -nostdlib
 #PROJECT_CWARNINGS =
 #PROJECT_CXXWARNINGS =
 
-SRCS	+= stm3210c_eval_lcd.c stm3210c_eval_ioe.c stm32_eval_spi_sd.c
+SRCS	+= stm3210c_eval_lcd.c stm3210c_eval_ioe.c
 
 # use small printf 
 SRCS += printf-stdarg.c
