--- a/Projects/429Disco/Touch_Panel/Makefile
+++ b/Projects/429Disco/Touch_Panel/Makefile
@@ -7,13 +7,13 @@
 
 TOPDIR = ../../..
 
-BOARD	= DISCOVERY_F4
+BOARD	= 429DISCO
 
 USE_STM_PERIF_LIB = 1
 #USE_USB = 1
 #RTOS = FreeRTOS
 START_FROM_RAM = 1
-USART_RETARGET = MINI
+#USART_RETARGET = MINI
 #USART_RETARGET = NEWLIB
 HARD_FLOAT = 1
 
@@ -24,9 +24,10 @@ OPTIMIZE	= -O2
 PROJECT_SRC = src 
 #PROJECT_INCLUDES = $(TOPDIR)/Libraries/STM32_USB_Device_Library/Class/hid/inc
 PROJECT_FLAGS = -ggdb
-PROJECT_LDFLAGS = -nostartfiles
-#PROJECT_WARNINGS = -Wall -Wextra -Wimplicit -Wcast-align -Wpointer-arith -Wredundant-decls -Wshadow -Wcast-qual -Wcast-align
+PROJECT_LDFLAGS = -nostartfiles -nostdlib
 #PROJECT_CWARNINGS =
 #PROJECT_CXXWARNINGS =
+
+SRCS += stm32f429i_discovery_lcd.c stm32f429i_discovery_sdram.c stm32f429i_discovery_ioe.c
 
 include $(TOPDIR)/Makefile.common
