--- a/Projects/429Disco/FreeRTOS/blink2tasks/Makefile
+++ b/Projects/429Disco/FreeRTOS/blink2tasks/Makefile
@@ -9,19 +9,18 @@ TOPDIR = ../../../..
 
 BOARD	= 429DISCO
 
-#USE_STM_PERIF_LIB = 1
-RTOS = scmRTOS
+USE_STM_PERIF_LIB = 1
+RTOS = FreeRTOS
 START_FROM_RAM = 1
 #USART_RETARGET = 1
-#HARD_FLOAT = 1
+HARD_FLOAT = 1
 
 TARGET		= target
 OPTIMIZE	= -O2
 
 #PROJECT_SRC = src
 PROJECT_FLAGS = -ggdb
-PROJECT_LDFLAGS = -nostartfiles
-#PROJECT_LDFLAGS = -nostartfiles -nostdlib
+PROJECT_LDFLAGS = -nostartfiles -nostdlib
 #PROJECT_CWARNINGS =
 #PROJECT_CXXWARNINGS =
 
