Add -nostdlib to SCMRtos makefiles

--- a/Projects/DiscoveryF4/SCMRTOS/blink2eventflag/Makefile
+++ b/Projects/DiscoveryF4/SCMRTOS/blink2eventflag/Makefile
@@ -8,7 +8,6 @@
 TOPDIR = ../../../..
 
 BOARD	= DISCOVERY_F4
-
 #USE_STM_PERIF_LIB = 1
 RTOS = scmRTOS
 START_FROM_RAM = 1
@@ -20,8 +19,7 @@ OPTIMIZE	= -O2
 
 #PROJECT_SRC = src
 PROJECT_FLAGS = -ggdb
-PROJECT_LDFLAGS = -nostartfiles
-#PROJECT_LDFLAGS = -nostartfiles -nostdlib
+PROJECT_LDFLAGS = -nostartfiles -nostdlib
 #PROJECT_CWARNINGS =
 #PROJECT_CXXWARNINGS =
 
