--- a/Projects/EvalC/SCMRTOS/blink2eventflag/Makefile
+++ b/Projects/EvalC/SCMRTOS/blink2eventflag/Makefile
@@ -7,7 +7,6 @@
 TOPDIR = ../../../..
 
 BOARD	= STM3210C
-
 #USE_STM_PERIF_LIB = 1
 RTOS = scmRTOS
 START_FROM_RAM = 1
@@ -17,7 +16,7 @@ OPTIMIZE	= -O2
 
 #PROJECT_SRC = src
 PROJECT_FLAGS = -ggdb
-#PROJECT_LDFLAGS = -nostartfiles -nostdlib
+PROJECT_LDFLAGS = -nostartfiles -nostdlib
 #PROJECT_CWARNINGS =
 #PROJECT_CXXWARNINGS =
 
