--- a/Projects/DiscoveryVL/SCMRTOS/blink3tasks/Makefile
+++ b/Projects/DiscoveryVL/SCMRTOS/blink3tasks/Makefile
@@ -8,7 +8,6 @@
 TOPDIR = ../../../..
 
 BOARD	= DISCOVERY_VL
-
 #USE_STM_PERIF_LIB = 1
 RTOS = scmRTOS
 START_FROM_RAM = 1
@@ -18,7 +17,7 @@ OPTIMIZE	= -O2
 
 #PROJECT_SRC = src
 PROJECT_FLAGS = -ggdb
-#PROJECT_LDFLAGS = -nostartfiles -nostdlib
+PROJECT_LDFLAGS = -nostartfiles -nostdlib
 #PROJECT_CWARNINGS =
 #PROJECT_CXXWARNINGS =
 
