--- a/Projects/DiscoveryVL/SCMRTOS/blink2tasks/Makefile
+++ b/Projects/DiscoveryVL/SCMRTOS/blink2tasks/Makefile
@@ -10,14 +10,16 @@ BOARD	= DISCOVERY_VL
 
 #USE_STM_PERIF_LIB = 1
 RTOS = scmRTOS
-START_FROM_RAM = 1
+#START_FROM_RAM = 1
 
 TARGET		= target
 OPTIMIZE	= -O2
 
+STACK_SIZE = 0x300
+
 #PROJECT_SRC = src
 PROJECT_FLAGS = -ggdb
-#PROJECT_LDFLAGS = -nostartfiles -nostdlib
+PROJECT_LDFLAGS = -nostartfiles -nostdlib
 #PROJECT_CWARNINGS =
 #PROJECT_CXXWARNINGS =
 
