--- a/Projects/EvalC/Printf_test/Makefile
+++ b/Projects/EvalC/Printf_test/Makefile
@@ -19,8 +19,8 @@ BOARD	= STM3210C
 #USE_USB = 1
 #RTOS = scmRTOS
 START_FROM_RAM = 1
-#USART_RETARGET = MINI
-USART_RETARGET = NEWLIB
+USART_RETARGET = MINI
+#USART_RETARGET = NEWLIB
 STACK_SIZE = 0x300
 HEAP_SIZE = 5K
 
