--- a/Projects/EvalC/new_test/Makefile
+++ b/Projects/EvalC/new_test/Makefile
@@ -8,22 +8,27 @@
 TOPDIR = ../../..
 
 BOARD	= STM3210C
-#USE_STM_PERIF_LIB = 1
-#USE_USB = 1
+USE_STM_PERIF_LIB = 1
 #RTOS = scmRTOS
 START_FROM_RAM = 1
-USART_RETARGET = MINI
-#USART_RETARGET = NEWLIB
+#USART_RETARGET = MINI
+USART_RETARGET = NEWLIB
 STACK_SIZE = 0x300
-HEAP_SIZE = 5K
+#HEAP_SIZE = 5K
 
-TARGET		= printf_test
+TARGET		= new_test
 OPTIMIZE	= -O2
 
-#PROJECT_SRC = src
+PROJECT_SRC = src
 PROJECT_FLAGS = -ggdb
 PROJECT_LDFLAGS = -nostartfiles -nostdlib
 #PROJECT_CWARNINGS =
 #PROJECT_CXXWARNINGS =
+
+SRCS	+= new.c
+
+# use small printf 
+#SRCS += printf-stdarg.c
+
 
 include $(TOPDIR)/Makefile.common
