fix usart problem on Discovery F4

--- a/Libraries/STM32F4xx_StdPeriph_Driver/Makefile
+++ b/Libraries/STM32F4xx_StdPeriph_Driver/Makefile
@@ -32,7 +32,7 @@ else
 endif
 
 PROJECT_SRC = src
-PROJECT_FLAGS = -ggdb
+PROJECT_FLAGS = -ggdb -DHSE_VALUE=8000000
 #PROJECT_LDFLAGS = -nostartfiles -nostdlib
 #PROJECT_CWARNINGS =
 #PROJECT_CXXWARNINGS =
